[tool.poetry]
name = "pygame-engine"
version = "0.1.0"
description = ""
authors = ["Golfmensch99 <marcel.menzel09@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "Pygame_Engine", from = "main" }]
repository = "https://github.com/Golfmensch99/Pygame_Engine.git"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
